[package]
name = "deep-space-indexing-demo"
version = "0.1.0"
edition = "2021"
authors = ["Justin Kilpatrick (justin@althea.net)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1", features=["rt-multi-thread"]}
deep_space = "2"
futures = "0.3"
