[package]
name = "deep-space-indexing-demo"
version = "0.1.0"
edition = "2021"
authors = ["Justin Kilpatrick (justin@althea.net)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1", features=["rt-multi-thread"]}
deep_space = "2"
cosmos-sdk-proto-althea = "0.13"
futures = "0.3"
sha256 = "1"
prost-types ="0.10"
lazy_static = "1.4"
